# research-mentor-interns

./: .example.env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  fix.md  plan.md  prompt.md  pyproject.toml  refactor-plan.md  scratchpad.md
agent-mentor-guidelines-test/: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent-mentor-guidelines-test/src/: cache.py  config.py  cost_monitor.py
agent-mentor-guidelines-test/src/agent/: mentor_agent.py
agent-mentor-guidelines-test/src/tools/: guidelines_tool.py
docs/: citation-system.md  citations.md
docs/architecture/: ADR-002-tool-interface-and-registry.md
evaluation/annotation/: rubrics.md
evaluation/annotation/templates/: manual_annotation_sheet.csv
evaluation/data/: evals_single_turn.jsonl
evaluation/scripts/: judge_metrics.py  judge_utils.py  manual_run_helper.py  run_all_stages.py  run_judge_scores.py  run_manual_stage.py
scripts/: line_count_guard.py
src/academic_research_mentor/: chat_logger.py  cli.py  mentor_tools.py  prompt.md  rich_formatter.py  router.py  runtime.py  session_logging.py
src/academic_research_mentor/attachments/: ingest.py
src/academic_research_mentor/citations/: enforcer.py  lint.py  merger.py
src/academic_research_mentor/cli/: __init__.py  main.py  repl.py  resume.py
src/academic_research_mentor/core/: execution_engine.py  fallback.py  fallback_policy.py  orchestrator.py  recommendation.py  transparency.py
src/academic_research_mentor/guidelines_engine/: injector.py
src/academic_research_mentor/literature_review/: context_builder.py
src/academic_research_mentor/rich_ui/: io_helpers.py
src/academic_research_mentor/runtime/: __init__.py  guidelines_tool.py  models.py  telemetry.py  tool_helpers.py  tool_impls.py  tools_wrappers.py  unified_research.py
tests/: conftest.py  test_citation_enforcer.py  test_citation_framework.py  test_citation_lint.py  test_convo_log_structure.py  test_core_scaffold.py  test_e2e_citations_policy.py  test_end_to_end_novelty.py  test_guidelines_integration.py  test_guidelines_multi_source.py  test_guidelines_recommendation.py  test_guidelines_tool_fallback.py  test_guidelines_v2_api.py  test_o3_fallback_reliability.py  test_openrouter_setup.py  test_react_toolset_validation.py  test_recommendation.py  test_recommender_degraded_scoring.py  test_tools_autodiscovery.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: MentorChat.tsx  (+4 more)
(+12 files in other folders)
