[project]
name = "agent-mentor-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "python-dotenv>=1.1.1",
    "duckduckgo-search>=6.1.8",
    "ddgs>=9.5.5",
]

[project.scripts]
agent-mentor-test = "main:main"
